--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "dependencies": {
     "axios": "^0.13.1",
     "react": "^15.2.1",
+    "react-bootstrap": "^0.30.2",
     "react-dom": "^15.2.1",
     "react-redux": "^4.4.5",
     "react-router": "^2.6.1",
