--- a/package.json
+++ b/package.json
@@ -48,12 +48,14 @@
   },
   "dependencies": {
     "axios": "^0.13.1",
+    "lodash": "^4.15.0",
     "react": "^15.2.1",
     "react-bootstrap": "^0.30.2",
     "react-dom": "^15.2.1",
     "react-redux": "^4.4.5",
     "react-router": "^2.6.1",
     "redux": "^3.5.2",
+    "redux-form": "^4.1.3",
     "redux-promise": "^0.5.3"
   },
   "scripts": {
