--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "lodash": "^4.15.0",
     "react": "^15.2.1",
     "react-bootstrap": "^0.30.2",
+    "react-cookie": "^0.4.8",
     "react-dom": "^15.2.1",
     "react-redux": "^4.4.5",
     "react-router": "^2.6.1",
